fix(combobox): Increase z-index of entity icon when used as an inline selection (#3305)

--- a/ui/components/combobox/base/_index.scss
+++ b/ui/components/combobox/base/_index.scss
@@ -283,6 +283,7 @@
   top: 50%;
   left: calc(#{$spacing-xx-small} + 1px);
   transform: translateY(-50%);
+  z-index: 2;
 
   .slds-icon {
     @include square($square-icon-x-small-boundary);
